<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/item_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cover_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cover_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/platform_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_title_textview"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/controller" />


    <TextView
        android:id="@+id/platform_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/platform"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/release_date_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cover_imageview" />

    <TextView
        android:id="@+id/release_date_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/release_date"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/esrb_rating_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/platform_textview" />

    <TextView
        android:id="@+id/esrb_rating_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/esrb_rating"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/developer_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/release_date_textview" />

    <TextView
        android:id="@+id/developer_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/developer"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/publisher_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/esrb_rating_textview" />

    <TextView
        android:id="@+id/publisher_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/publisher"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/genre_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developer_textview" />

    <TextView
        android:id="@+id/genre_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/genre"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/description_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/publisher_textview" />

    <TextView
        android:id="@+id/description_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/description"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre_textview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_textview" />

    <ImageButton
        android:id="@+id/favourite_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/add_to_favourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_title_textview"
        app:srcCompat="@drawable/ic_favourite" />
</androidx.constraintlayout.widget.ConstraintLayout>