...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/game_rating_textview"
            android:layout_width="103dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="Rating"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Release date"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/game_platform_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Platform"
                android:textSize="15sp" />
        </LinearLayout>

...
