...
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/game_list"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image" />

    <ImageButton
...
